#86 - Implement turn based gameplay: - Added tests in lobby for round-based gameplay